Fix Chrome z-index bug

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -77,6 +77,7 @@ Main Components
   height: 80px;
   width: 90%;
   margin: 0 auto;
+  position: relative;
   z-index: 9439832766;
   -webkit-transition: -webkit-transform 0.5s;
   -moz-transition: -moz-transform 0.5s;
